// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compose action queries "query" action custom endpoint 1`] = `
{
  "alias": "$action_0",
  "kind": "query",
  "model": "Org",
  "query": {
    "filter": {
      "args": [
        {
          "kind": "identifier-path",
          "namePath": [
            "Org",
            "id",
          ],
        },
        {
          "kind": "literal",
          "literal": {
            "kind": "integer",
            "value": 1,
          },
        },
      ],
      "kind": "function",
      "name": "is",
    },
    "fromPath": [
      "Org",
    ],
    "kind": "query",
    "limit": undefined,
    "modelRefKey": "Org",
    "name": "$query",
    "offset": undefined,
    "orderBy": undefined,
    "refKey": "N/A",
    "retCardinality": "collection",
    "retType": "Org",
    "select": [
      {
        "alias": "name",
        "expr": {
          "kind": "identifier-path",
          "namePath": [
            "Org",
            "name",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "string",
          "nullable": false,
        },
      },
    ],
  },
}
`;

exports[`compose action queries "query" action native endpoint 1`] = `
{
  "alias": "$action_0",
  "changeset": [
    {
      "fieldsetPath": [
        "name",
      ],
      "kind": "input",
      "name": "name",
      "setter": {
        "kind": "alias-reference",
        "path": [
          "name",
        ],
        "source": "fieldset",
      },
      "validate": undefined,
    },
    {
      "fieldsetPath": [
        "description",
      ],
      "kind": "input",
      "name": "description",
      "setter": {
        "kind": "alias-reference",
        "path": [
          "description",
        ],
        "source": "fieldset",
      },
      "validate": undefined,
    },
  ],
  "filter": undefined,
  "isPrimary": true,
  "kind": "update-one",
  "model": "Org",
  "select": [
    {
      "alias": "id",
      "expr": {
        "kind": "identifier-path",
        "namePath": [
          "$action_0",
          "id",
        ],
      },
      "kind": "expression",
      "type": {
        "kind": "integer",
        "nullable": false,
      },
    },
  ],
  "targetPath": [
    "$target_0",
  ],
}
`;

exports[`compose action queries "query" action query first 1`] = `
{
  "alias": "$action_0",
  "kind": "query",
  "model": "Measurement",
  "query": {
    "filter": undefined,
    "fromPath": [
      "device",
      "measurements",
    ],
    "kind": "query",
    "limit": 1,
    "modelRefKey": "Device",
    "name": "$query",
    "offset": undefined,
    "orderBy": [
      {
        "direction": "desc",
        "exp": {
          "kind": "identifier-path",
          "namePath": [
            "device",
            "measurements",
            "timestamp",
          ],
        },
      },
    ],
    "refKey": "N/A",
    "retCardinality": "nullable",
    "retType": "Measurement",
    "select": [
      {
        "alias": "id",
        "expr": {
          "kind": "identifier-path",
          "namePath": [
            "device",
            "measurements",
            "id",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "integer",
          "nullable": false,
        },
      },
    ],
  },
}
`;

exports[`compose model queries example with nested filters 1`] = `
[
  {
    "filter": {
      "args": [
        {
          "args": [
            {
              "kind": "identifier-path",
              "namePath": [
                "Org",
                "repos",
                "org",
                "id",
              ],
            },
            {
              "kind": "literal",
              "literal": {
                "kind": "integer",
                "value": 1,
              },
            },
          ],
          "kind": "function",
          "name": "is",
        },
        {
          "kind": "identifier-path",
          "namePath": [
            "Org",
            "repos",
            "is_active",
          ],
        },
      ],
      "kind": "function",
      "name": "and",
    },
    "fromPath": [
      "Org",
      "repos",
    ],
    "kind": "query",
    "limit": undefined,
    "modelRefKey": "Org",
    "name": "repos_if_one",
    "offset": undefined,
    "orderBy": undefined,
    "refKey": "Org.repos_if_one",
    "retCardinality": "collection",
    "retType": "Repo",
    "select": [],
  },
]
`;

exports[`compose model queries nested example without filters 1`] = `
[
  {
    "filter": undefined,
    "fromPath": [
      "Org",
      "repos",
      "org",
    ],
    "kind": "query",
    "limit": undefined,
    "modelRefKey": "Org",
    "name": "back_to_org",
    "offset": undefined,
    "orderBy": undefined,
    "refKey": "Org.back_to_org",
    "retCardinality": "collection",
    "retType": "Org",
    "select": [],
  },
]
`;

exports[`compose model queries order and limit 1`] = `
{
  "filter": undefined,
  "fromPath": [
    "Org",
    "repos",
  ],
  "kind": "query",
  "limit": 5,
  "modelRefKey": "Org",
  "name": "recent_repos",
  "offset": undefined,
  "orderBy": [
    {
      "direction": "desc",
      "exp": {
        "kind": "identifier-path",
        "namePath": [
          "Org",
          "repos",
          "id",
        ],
      },
    },
  ],
  "refKey": "Org.recent_repos",
  "retCardinality": "collection",
  "retType": "Repo",
  "select": [],
}
`;
